loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: '(' expected but identifier found.
while !(estFaceMur():Boolean) {
      ^LoopWhile:5: error: illegal start of simple expression
	}
        ^